--- a/readme.html
+++ b/readme.html
@@ -7,72 +7,87 @@
   </head>
   <body>
     <header>
-      <section>
-        <h1>Hi. I'm<br />Gabriel.</h1>
-        <hr />
-        <p>I'm an amateur Digital Writer and professional Web Developer</p>
-      </section>
+      <h1>Hi. I'm<br />Gabriel.</h1>
+      <p>I'm an amateur Digital Writer and professional Web Developer!</p>
     </header>
+    <br />
     <main>
+      <h2>Here are some of my most recent projects:</h2>
       <ul>
-        <li style="grid-column: 1 / span 2; grid-row: 1 / span 2">1</li>
-        <li>2</li>
-        <li>3</li>
-        <li style="grid-column: 3 / span 2">4</li>
+        <li>
+          <a
+            href="https://gabriel-de-azevedo.github.io/contact-form/"
+            target="_blank"
+          >
+            <img
+              src="screenshots/contact-form.png"
+              alt="Contact Form Project"
+            />
+          </a>
+        </li>
+        <li>
+          <a
+            href="https://gabriel-de-azevedo.github.io/recipe-page-main/"
+            target="_blank"
+          >
+            <img src="screenshots/recipe-page.png" alt="Recipe Page Project" />
+          </a>
+        </li>
+        <li>
+          <a
+            href="https://gabriel-de-azevedo.github.io/blog-preview-card-main/"
+            target="_blank"
+          >
+            <img
+              src="screenshots/blog-preview-card.png"
+              alt="Blog Preview Card Project"
+            />
+          </a>
+        </li>
       </ul>
     </main>
     <style>
-      *,
-      *::before,
-      *::after {
+      * {
         box-sizing: border-box;
-        margin: 0;
-        padding: 0;
+      }
+      body {
+        max-width: 50rem;
+        margin: 0 auto;
+        display: grid;
+        place-items: center;
+        padding: 2em;
+        gap: 2em;
+        background: #fdfcdc;
+        font-family: "Courier New", Courier, monospace;
+        font-size: 1.5rem;
+      }
+      img {
+        max-width: 100%;
+        height: auto;
+        display: block;
       }
       ul,
       li {
+        padding: 0;
         list-style: none;
       }
-      body {
+      h2 {
+        font-size: 1.25em;
+      }
+      ul {
         display: flex;
-        flex-direction: column;
-        gap: 3em;
-        padding: 3em;
-        font-size: 1.5rem;
-        font-family: Arial, Helvetica, sans-serif;
-        background: black;
-        color: white;
+        flex-wrap: wrap;
+        gap: 1em;
       }
-      header {
-        display: grid;
-        place-items: center;
+      li img {
+        max-height: 5em;
+        border-radius: 0.25em;
+        border: solid black 1px;
+        box-shadow: 0.25em 0.25em black;
+        transition-duration: 0.25s;
       }
-      header section {
-        display: flex;
-        gap: 2em;
-        text-align: center;
-      }
-
-      header h1 {
-        font-size: 3em;
-        width: 100%;
-      }
-      header p {
-        display: grid;
-        place-items: center;
-        width: 100%;
-      }
-      main ul {
-        display: grid;
-        gap: 0.5em;
-        grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-      }
-      main li {
-        background-color: white;
-        color: black;
-        padding: 1em;
-        border-radius: 2em;
+      li img:hover {
+        transform: rotate(5deg);
       }
     </style>
   </body>
